--- a/JRMDesktopUI/Views/ShellView.xaml
+++ b/JRMDesktopUI/Views/ShellView.xaml
@@ -6,7 +6,19 @@
         xmlns:local="clr-namespace:JRMDesktopUI.Views"
         mc:Ignorable="d"
         Title="ShellView" Height="450" Width="800">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top" FontSize="18">
+            <MenuItem Header="_File">
+
+            </MenuItem>
+            <MenuItem Header="_Account">
+                <MenuItem x:Name="LoginScreen" Header="_Login"/>
+            </MenuItem>
+        </Menu>
+    
     <Grid>
-        
-    </Grid>
+            <ContentControl x:Name="ActiveItem" Margin="5"/>
+
+        </Grid>
+    </DockPanel>
 </Window>
